CRM-20096 - Fix wrapping of uploaded filename

--- a/css/uploader.css
+++ b/css/uploader.css
@@ -42,6 +42,9 @@ input[type="file"]#cc-uploader-button {
   color: #42AFCB;
   font-size: 13px;
   margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 #bootstrap-theme .cc-uploader-detail .civicase-file-action {
   text-align: right;
